--- a/host.cfg
+++ b/host.cfg
@@ -1,13 +1,13 @@
 define host {
    use linux-server
-   host_name ubuntu_host
-   alias Ubuntu Host
+   host_name nginx
+   alias nginx Host
    address 172.17.0.2
    register 1
 }
 
 define service {
-   host_name ubuntu_18.04
+   host_name nginx
    service_description PING
    check_command check_ping!100.0,20%!500.0,60%
    max_check_attempts 2
